First_Forms_Add/First SQL Querries

--- a/WpfApp/WpfApp/WPF_8_EF_HMS.xaml
+++ b/WpfApp/WpfApp/WPF_8_EF_HMS.xaml
@@ -7,7 +7,13 @@
         mc:Ignorable="d"
         Title="WPF_8_EF_HMS" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="gridDoctors" HorizontalAlignment="Left" Height="226" VerticalAlignment="Top" Width="772" Margin="10,10,0,0"/>
+        <DataGrid x:Name="gridDoctors" HorizontalAlignment="Left" Height="122" VerticalAlignment="Top" Width="772" Margin="10,287,0,0"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Height="30" Margin="30,35,0,0" VerticalAlignment="Top" Width="125" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="txtName" HorizontalAlignment="Left" Height="30" Margin="160,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="248" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Label Content="Specialization:" HorizontalAlignment="Left" Height="30" Margin="30,89,0,0" VerticalAlignment="Top" Width="125" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="txtName_Copy" HorizontalAlignment="Left" Height="30" Margin="160,89,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="248" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <Label Content="Qualification:" HorizontalAlignment="Left" Height="30" Margin="36,138,0,0" VerticalAlignment="Top" Width="124" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="txtName_Copy1" HorizontalAlignment="Left" Height="30" Margin="160,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="248" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
 
     </Grid>
 </Window>
