--- a/WpfApp/WpfApp/WPF_8_EF_HMS.xaml
+++ b/WpfApp/WpfApp/WPF_8_EF_HMS.xaml
@@ -16,6 +16,7 @@
         <TextBox x:Name="txtQualification" HorizontalAlignment="Left" Height="30" Margin="160,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="248" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Left" Margin="293,194,0,0" VerticalAlignment="Top" Width="115" Height="35" FontSize="20" FontWeight="Bold" Click="BtnAdd_Click"/>
         <Button x:Name="btnLoadDoctors" Content="Load Doctors" HorizontalAlignment="Left" Margin="10,247,0,0" VerticalAlignment="Top" Width="145" Height="35" FontSize="20" FontWeight="Bold" Click="btnLoadDoctors_Click"/>
+        <Button x:Name="btnUpdateDoctor" Content="Update Doctor" HorizontalAlignment="Left" Margin="637,247,0,0" VerticalAlignment="Top" Width="145" Height="35" FontSize="20" FontWeight="Bold" Click="btnUpdateDoctor_Click"/>
 
     </Grid>
 </Window>
