--- a/WpfApp/WpfApp/App.xaml
+++ b/WpfApp/WpfApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp"
-             StartupUri="WPF_8_EF_HMS.xaml">
+             StartupUri="WPF_EF_HMS.xaml">
     <Application.Resources>
          
     </Application.Resources>
