--- a/WpfApp/WpfApp/WPF_EF_HMS.xaml
+++ b/WpfApp/WpfApp/WPF_EF_HMS.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="WpfApp.WPF_8_EF_HMS"
+﻿<Window x:Class="WpfApp.WPF_EF_HMS"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
-        Title="WPF_8_EF_HMS" Height="450" Width="800">
+        Title="WPF_EF_HMS" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="gridDoctors" HorizontalAlignment="Left" Height="122" VerticalAlignment="Top" Width="424" Margin="10,287,0,0"/>
+        <DataGrid x:Name="gridDoctors" HorizontalAlignment="Left" d:ItemsSource="{d:SampleData ItemCount=5}" Height="122" VerticalAlignment="Top" Width="424" SelectionChanged="gridDoctors_SelectionChanged" Margin="10,287,0,0"/>
         <Label Content="Name:" HorizontalAlignment="Left" Height="30" Margin="30,35,0,0" VerticalAlignment="Top" Width="125" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <TextBox x:Name="txtName" HorizontalAlignment="Left" Height="30" Margin="160,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="248" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Label Content="Specialization:" HorizontalAlignment="Left" Height="30" Margin="30,89,0,0" VerticalAlignment="Top" Width="125" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
@@ -18,12 +18,11 @@
         <Button x:Name="btnLoadDoctors" Content="Load Doctors" HorizontalAlignment="Left" Margin="10,247,0,0" VerticalAlignment="Top" Width="145" Height="35" FontSize="20" FontWeight="Bold" Click="btnLoadDoctors_Click"/>
         <Button x:Name="btnUpdateDoctor" Content="Update Doctor" HorizontalAlignment="Left" Margin="637,247,0,0" VerticalAlignment="Top" Width="145" Height="35" FontSize="20" FontWeight="Bold" Click="btnUpdateDoctor_Click"/>
         <Label Content="Name:" HorizontalAlignment="Left" Height="26" Margin="456,284,0,0" VerticalAlignment="Top" Width="108" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <TextBox x:Name="txtName2" HorizontalAlignment="Left" Height="26" Margin="568,284,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="214" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <TextBox x:Name="txtName2" HorizontalAlignment="Left" Height="30" Margin="568,284,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="214" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Label Content="Specialization:" HorizontalAlignment="Left" Height="24" Margin="456,330,0,0" VerticalAlignment="Top" Width="108" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <TextBox x:Name="txtSpecialization2" HorizontalAlignment="Left" Height="24" Margin="568,330,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="214" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Label Content="Qualification:" HorizontalAlignment="Left" Height="26" Margin="456,370,0,0" VerticalAlignment="Top" Width="107" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <TextBox x:Name="txtQualification2" HorizontalAlignment="Left" Height="26" Margin="568,370,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="214" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Button x:Name="btnDeleteDoctor" Content="Delete Doctor" HorizontalAlignment="Left" Margin="289,247,0,0" VerticalAlignment="Top" Width="145" Height="35" FontSize="20" FontWeight="Bold" Click="btnDeleteDoctor_Click"/>
-
     </Grid>
 </Window>
